<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/titre"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/user_profile"
        android:textColor="#F8000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:layout_marginTop="100dp">

        <TextView
            android:id="@+id/textPseudo"
            android:layout_width="210px"
            android:layout_height="102px"
            android:text="@string/pseudo"
            android:textSize="12sp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/pseudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pseudo"
            android:inputType="text"
            android:layout_toRightOf="@id/textPseudo"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="210px"
            android:layout_height="102px"
            android:layout_below="@id/pseudo"
            android:gravity="center"
            android:text="@string/password"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_toRightOf="@id/textPassword"
            android:layout_alignParentRight="true"
            android:layout_below="@id/pseudo"/>

        <TextView
            android:id="@+id/textNum"
            android:layout_width="210px"
            android:layout_height="102px"
            android:layout_below="@id/password"
            android:gravity="center"
            android:text="@string/phone_number"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/numTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:layout_toRightOf="@id/textNum"
            android:layout_alignParentRight="true"
            android:layout_below="@id/password"/>

        <Button
            android:id="@+id/buttonValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_below="@id/numTel"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
</RelativeLayout>